  a clear error message, whereas previously, the resulting data.frame
  would have contained seemingly random zeros.
- Some optimizations (vectorization, less copying, etc.)
- In the non-standard situation of multiple series per file, the previous
  versions assumed the same range of years for all series. This rule,
  breaking of which would give strange results, no longer applies.

File: read.tucson.R
-------------------

- Calls to read.fwf() now set the colClasses parameter (see explanation above)


2011-11-14 Mikko Korpela
* CHANGES IN dplR VERSION 1.4.9

File: rcompact.c
----------------

- read.compact() now accepts series IDs consisting of any sequence of
  printable ASCII characters.

2011-11-06 Mikko Korpela
* CHANGES IN dplR VERSION 1.4.8

File: NAMESPACE
---------------

- Made some internal functions truly internal by removing them from the
  export list

File: dplR-internal.Rd
----------------------

- The file was removed

Various .c and .h files:
------------------------

- NULL, TRUE and FALSE are used for clarity
- Rboolean type is now used more extensively for truth values
- stddef.h is #included where NULL is used

Various .R files:
-----------------

- When indexing data.frames, use df[[foo]][bar] instead of df[bar, foo]
  when foo is a single index (or df$foo[bar] instead of df[bar, "foo"]).
  The former is supposed to be faster than the latter.
  https://stat.ethz.ch/pipermail/r-devel/2011-October/062313.html
- Some input checks added

File: combine.rwl.R
-------------------

- Avoids some conversions between matrix and data.frame

File: ffcsaps.R
---------------

- For loop removed in ffppual (constant number of iterations)
- Useless instances of cbind() and rbind() removed
- Avoids computing or passing as arguments things that are already known
  or constant
- ffsorted2() is a modified version of ffsorted() which should speed
  things up a little by making a rev() call unnecessary
- Unnecessary call to pmax() removed